--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@
 - Capacity
 - Grow/shrink
 - Change T parameter to BlockSize (in bits).
-- Add bitInvert, bitInvertAnd, bitInvertOr, bitInvertXor, bitAndInvertedArg, bitOrInvertedArg, bitXorInvertedArg.
+- Add bitInvert (don't forget masking of unused bits!), bitInvertAnd, bitInvertOr, bitInvertXor, bitAndInvertedArg, bitOrInvertedArg, bitXorInvertedArg.
 - OpChain (including count).
 - Add Compute class template parameter.
 
