Data size calculation fixes.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,4 +4,5 @@
 - Add bitInvert (don't forget masking of unused bits!), bitInvertAnd, bitInvertOr, bitInvertXor, bitAndInvertedArg, bitOrInvertedArg, bitXorInvertedArg.
 - OpChain (including count).
 - Add Compute class template parameter.
+- Unit tests, workflow tests, benchmark tests.
 
