Added bitInvert method.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 
 - Capacity
 - Grow/shrink
+- Add setRange and getRange methods.
 - Add bitInvert (don't forget masking of unused bits!), bitInvertAnd, bitInvertOr, bitInvertXor, bitAndInvertedArg, bitOrInvertedArg, bitXorInvertedArg.
 - OpChain (including count).
 - Add Compute class template parameter.
